# atio

./: .gitignore  README.md  benchmark_results_summary.md  benchmark_write_speed.py  demo.parquet  demo_atio_usage.py  example_atomicwriter_trace.py  example_progress.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml
atomicwriter/: core.py  plugins.py  progress.py  utils.py
atomicwriter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: Makefile
docs/source/: advanced_usage.rst  api.rst  conf.py  configuration.rst  formats.rst  index.rst  quickstart.rst
docs/source/_static/: custom.css
examples/: example_atomicwriter_trace.py  example_progress.py  example_wirte_snapshot.py  test_basic_vs_verbose.py  test_manual_interrupt.py
src/atio/: __init__.py  core.py  plugins.py  utils.py
src/atomicwriter/: __init__.py  core.py  plugins.py  utils.py
tests/: large.parquet  test1.parquet  test_actual_user_logs.py  test_basic_success.parquet  test_core.py  test_diagnostic_logging.py  test_error_diagnosis.py  test_failure_performance.py  test_interrupt_performance.py  test_large_data_success.parquet  test_large_data_verbose.parquet  test_plugins.py  test_real_user_experience.py  test_realistic_failures.py  test_snapshot.py  test_verbose_success.parquet
tests/output_data/: demo_pandas.csv  demo_pandas.html  demo_pandas.json  demo_pandas.parquet  demo_pandas.pkl  demo_polars.avro  demo_polars.ipc  demo_polars.json
tests/scenarios/1_keyboard_interrupt/: README.md  after.py  before.py
tests/scenarios/2_oom/:  before.py  README.md  after.py
tests/scenarios/3_ci_failure/: README.md  after.py  before.py
tests/scenarios/4_oomnpa/: README.md  after.py  before.py
