[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atio"
version = "2.0.0"
authors = [
    { name="Seo Jae Oh", email="seojaeohcoder@gmail.com" },
]
keywords = ["atomic", "file", "writer", "pandas", "polars", "numpy", "data"]
urls = { Homepage = "https://github.com/seojaeohcode/atomic-writer" }
description = "Safe atomic file writer for Pandas, Polars, NumPy, and other data objects"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# setup.py와 requirements.txt의 핵심 의존성을 여기에 통합
dependencies = [
    "pandas",
    "pyarrow",
    "polars",
    "numpy",
    "sqlalchemy",
    "openpyxl",
    "connectorx",
    "fsspec"
]

# (선택 사항이지만 강력 추천) 개발용 의존성 분리
[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

# `find_packages()` 역할을 하는 부분 (src 레이아웃 사용 시)
[tool.setuptools]
packages = { find = { where = ["src"] } }